# hsencfs

./: .gitignore  .test2.txt.datx  71  AUTHORS  COMPILE  COPYING  ChangeLog  DISCLAIMER  Doxyfile  FUSEOPTS  GNOME_HSENCApplet.server  GNOME_HSENCApplet.server.in  Makefile  Makefile.am  Makefile.in  NEWS  PASSHINTS  QUICKSTART  README  README.md  SECURITY  SUMFILE  TODO  aa  autogen.sh  backup-060220252136-pre-hsencfs.tgz  backup-060220252140-pre-hsencfs.tgz  backup-060320252252-pre-hsencfs.tgz  bb  chksum.sh  clean.out  common.mk  conf.sh  config.h  config.h.in  config.out  config.status  configure  configure.ac  configure.scan  (+37 more)
.deps/: hsencfs-hsencfs.Po  hsencfs-hspass.Po
DEBIAN/: README.Debian  changelog  control  manpage.1.ex  manpage.md.ex  manpage.sgml.ex  postinst.ex  preinst.ex
askpass/: Makefile  Makefile.am  Makefile.in  config.status  cryto_ssl.py  crytog.py  hsaskpass.py  rsamod.py  test_keys.txt
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
bluepoint/: Makefile  Makefile.am  Makefile.in  README  block_blue2  block_blue2.c  bluepoint.c  bluepoint.h  bluepoint2.c  bluepoint2.h  config.status  configure~  hs_crypt.c  hs_crypt.h  test_blue2  test_blue2.c
bluepoint/.deps/: block_blue2.Po  block_blue2.Tpo  bluepoint2.Po  bluepoint2.Tpo  bpdec2-bluepoint2.Po  bpdec2-bluepoint2.Tpo  bpdec2-hs_crypt.Tpo  bpenc2-bluepoint2.Po  bpenc2-bluepoint2.Tpo  bpenc2-hs_crypt.Tpo  hs_crypt.Tpo  hsaskpass-bluepoint2.Po  hsencfs-bluepoint2.Po  test_blue2.Po
bluepoint/autom4te.cache/: output.1  output.2  requests  traces.1
common/: .test2.datx  Makefile  Makefile.am  Makefile.in  base64.c  base64.h  bp2com.c  bp2com.h  bpdec2  bpdec2.c  bpenc2  bpenc2.c  config.h  config.status  configure  configure.ac  configure~  hsaskpass  hsaskpass.c  hsencdef.h  hspass.c  hspass.h  hsutils.c  hsutils.h  markfile  markile  test  test2  test3  testpass  testpass.c  xmalloc.c  xmalloc.h
common/.deps/: bpdec2-hspass.Po  bpdec2-hspass.Tpo  bpdec2-hsutils.Po  bpdec2-hsutils.Tpo  bpenc2-hspass.Po  bpenc2-hspass.Tpo  bpenc2-hsutils.Po  bpenc2-hsutils.Tpo  hsaskpass-hsaskpass.Po  hsaskpass-hspass.Po  hsaskpass-hsutils.Po  hsencfs-hspass.Po  hsencfs-hsutils.Po  hsutils-hspass.Po  hsutils-hsutils.Po
common/autom4te.cache/: output.1  output.2  output.3  output.4  output.5  requests  traces.1  traces.3  traces.4
common/readonly/: markfile
debian/: autoreconf.after  autoreconf.before  changelog  control  files  hsencfs.doc-base.ex  hsencfs.manpages  prerm.ex  rules  watch.ex
debian.org/: autoreconf.before  control  files
doc-pak/: README  README.html
docs/: Makefile  Makefile.am  Makefile.in  TODO  config.status  configure  configure.ac  configure~  hsencfs.1  hsencfs.1.org  hsencfs.info  hsencfs.texi  version.texi
docs/autom4te.cache/: output.0  output.2  output.4  requests  traces.0  traces.1  traces.3  traces.4
docs/hsencfs.html/: Command-Line.html  Directories.html  GNU-Free-Documentation-License.html  Hsencfs-Index.html  Notes.html  Passwords.html  Safety-and-Security.html  Un_002dmounting.html  Verify-Notes.html  index.html
hello/: Makefile  Makefile.in  config.status  configure  configure~  hello
hsencfs/: AUTHORS  COMPILE  ChangeLog  Makefile  Makefile.am  Makefile.in  PASSES  QUICKSTART  SUMFILE  conf.sh  config.status  configure.ac  hard-remove.sh  hsencfs.service  hsencfs.spec  rpmwarn
html/: EVP__PKEY__RSA__keygen_8c.html  EVP__PKEY__RSA__keygen_8c__incl.md5  README_8md.html  ____init_____8py.html  annotated.html  askpass_2hsaskpass_8py.html  base64_8c.html  base64_8c__incl.md5  base64_8h.html  (+303 more)
src/: .aa.datx  .aaa300.txt.datx  .bb.secret  .hello.c.enc.datx  Makefile  Makefile.am  Makefile.in  Makefile2  aa  aaa  aaa300.txt  ansi_term_codes.txt  base64.c  bb  bbb  comp.sh  config.status  configure  configure.ac  configure~  core  create.sh  create_4096.sh  create_5000.sh  create_testr.sh  cycle.sh  cycle2.sh  cycle3.sh  cycle4.sh  cycle_4096.sh  cycle_read.sh  dd  dualwrite.c  errno.txt  fresh.sh  hello  hello.c.enc  hsaskpass  hsaskpass.c  hsaskpass.sh  (+31 more)
src/.crypt/: .passdata
src/.deps/: hsaskpass-hsaskpass.Po  hsencfs-base64.Po  hsencfs-hsencfs.Po  hsencfs-hspass.Po  hsencfs-hsutils.Po
src/autom4te.cache/: output.0  output.2  output.4  output.5  requests  traces.0  traces.2  traces.3  traces.4  traces.5
src/backup/: Makefile  Makefile.in  config.status  configure.ac  create_all.sh  cycle.sh  fresh.sh  hsencfs  hsencfs.c  hsencop.c  hsencop.c.org  hsencrr.c  hsencrw.c  hsencsb.c  hsencsb.h  hsencsu.c  vars.sh  write.ped
src/backup/autom4te.cache/: output.1  requests
src/create/: create_4096.sh  create_8192.sh  create_all.sh  create_maketest.sh
src/cycle/: cycle.sh  cycle_4096.sh  cycle_5000.sh  cycle_read.sh  cycle_write.sh
src/test/: test.sh  testfile  testfile.dec  testfile4
src/test_cycle/: cycle.sh  cycle_5000.sh  cycle_read.sh
src/test_data/: aa300.txt  aa3000.txt  gendata.sh
src/tests/: dualread  dualwrite  dualwrite.c  farwrite  farwrite.c  hello.c  jumpread  jumpread.c  onejump  onejump.c  seekcp  seekcp.c  zigjump  zigjump.c  zigzag  zigzag.c
src/tmp/: aa300.txt  aa4500.txt  aa9000.txt
tests/: Makefile  Makefile.am  Makefile.in  README.md  aa  config.status  configure  configure.ac  dualread  dualwrite  farwrite  jumpread  onejump  seekcp  seekcp.c  test_two.sh  testall.sh  testmisc.sh  zigjump  zigjump.c  zigzag
tests/autom4te.cache/: output.1  output.2  requests  traces.0  traces.2
tests/test_cycle/: cycle_write.sh
tests/test_data/: README.md  aa12288.txt  gendata.sh
tools/: .aa.datx  .bb.secret  .cc.secret  .dd.secret  Makefile  Makefile.am  Makefile.in  bb  bp2com.c  bp2com.h  bpdec2  bpdec2.c  bpenc2  bpenc2.c  cc  config.status  configure  configure.ac  configure.old.ac  configure~
tools/.deps/: bpdec2-bp2com.Po  bpdec2-bpdec2.Po  bpdec2-bpdec2.Tpo  bpdec2-hspass.Po  bpdec2-hsutils.Po  bpenc2-bp2com.Po  bpenc2-bpenc2.Po  bpenc2-bpenc2.Tpo
tools/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
(+831 files in other folders)
