# ------------------------------------------------------------------------
# HSENCFS (High Security EnCrypting File System) docs

AUTOMAKE_OPTIONS = subdir-objects

EXTRA_DIST = TODO hsencfs.1

dist_man_MANS = hsencfs.1

info_TEXINFOS = hsencfs.texi
hsencfs_TEXINFOS = gpl.texi
man1_MANS = hsencfs.1

# EOF
