# ------------------------------------------------------------------------
# HSENCFS (High Security EnCrypting File System) docs

AUTOMAKE_OPTIONS = subdir-objects

EXTRA_DIST = TODO

dist_man_MANS = hsencfs.1
hsencfs_TEXINFOS = hsencfs.texi

#man1_MANS = hsencfs.1
info_TEXINFOS = hsencfs.texi

# EOF
