#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.
#

AC_PREREQ([2.68])
AC_INIT([hsencfs], [1.20], [bugs@nohost.none])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE()

AC_CONFIG_SRCDIR([config.h.in])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

AC_PREFIX_DEFAULT(/usr/local)
AC_CONFIG_FILES([ Makefile ])
AC_OUTPUT

# EOF
